#VERSION 0.7.8# 

*  Peak_core > Introduce core extensions objects primarily to move methods not used inside the application running process 
               and by the way, ligthen Peak_Core file. Removed/moved methods getLang(), getConfigs(), checkConfigs() 
               into extension , and added method ext() to access to them. Extensions objects are stored in $extensions var.

*  Peak_Core > added method getPaths

*  autoload.php > added 'Controller' suffix support for controllers files and 
   fixed Peak_Application run() method and Peak_Controller initController() method accordly
   Controller files and classes names look likes 'foobarController.php'

*  Added Peak_Dispatcher

*  Peak_View > fix problem with __call(). Methods 'return' value/boolean was missing

*  Peak_Render > added compression to caching

*  Peak_Render > added methods : isCachedBlock(), getCacheBlock(), cacheBlockEnd().
   Those new functions help to cache a block of text/code inside views

#VERSION 0.7.7#

*  Peak_Render > added methods : genCacheId() and getCacheIdFile().
   enableCache() and disableCache() can be used inside controller and bootstrap.
   isCached() can be used inside controller.

*  Peak_Render > Added scripts views outputing cache.
                 added methods    : enableCache(), disableCache(), preOutput(), isCached()
                 added properties : $_use_cache, $_cache_expire, $_cache_path, $_cache_id

   - Render engines must use preOutput() in their render() method instead of output() directly 
     if they wants to support outputing cache. 
   - method output() must be protected

*  Peak_Registry > added static method isInstanceOf()

*  Peak_Lang > added method load()

*  Peak_Lang > method translate() > added translation string replacements and callback function

*  Peek_Application > fixed run(), constants ENABLE_PEAK_CONTROLLER were not properly checked. Also
   constant ENABLE_PEAK_CONTROLLER becomes ENABLE_PEAK_CONTROLLERS (now with a 'S' at the end)
