@@ -16,6 +16,7 @@ class Peak_Exception extends Exception
 	const ERR_APP_MOD_NOT_SPECIFIED         = 'Application: module not specified.';
 	const ERR_APP_CTRL_NOT_FOUND            = 'Application: controller %1$s not found.';
 	const ERR_CORE_NO_CTRL_FOUND            = 'Core: application controllers not found.';
+	const ERR_CORE_EXTENSION_NOT_FOUND      = 'Core: extension %1$s not found.';
 	const ERR_CTRL_DEFAULT_ACTION_NOT_FOUND = 'Controller: no _index() method found.';
 	const ERR_VIEW_ENGINE_NOT_SET           = 'View rendering engine not set. Use setRenderEngine() from Peak_View before trying to render application controller.';
 	const ERR_VIEW_TPL_NOT_FOUND            = 'View: template file %1$s not found.';
